--- a/data/ui/add_equation_window.ui
+++ b/data/ui/add_equation_window.ui
@@ -1,11 +1,10 @@
 <?xml version='1.0' encoding='utf-8'?>
-<!--SPDX-License-Identifier: GPL-3.0-or-later-->
 <interface>
   <requires lib="gtk" version="4.0" />
   <requires lib="libadwaita" version="1.2" />
   <template class="AddEquationWindow" parent="AdwWindow">
     <property name="title">Add Equation</property>
-    <property name="default-width">575</property>
+    <property name="default-width">450</property>
     <property name="default-height">125</property>
     <child>
       <object class="GtkShortcutController">
@@ -27,65 +26,99 @@
         <child>
           <object class="AdwToastOverlay" id="toast_overlay">
             <child>
-              <object class="AdwPreferencesGroup">
-                <property name="visible">True</property>
-                <property name="can-focus">True</property>
-                <property name="title" translatable="yes">Add Equation</property>
-                <property name="description" translatable="yes"> Here you can add data using an equation using Numpy notation. Make sure to use a capital letter for the X coordinate.</property>
-                <property name="margin-start">30</property>
-                <property name="margin-end">30</property>
-                <property name="margin-top">20</property>
-                <property name="margin-bottom">20</property>
+              <object class="GtkBox">
+                <property name="orientation">vertical</property>
                 <child>
-                  <object class="AdwEntryRow" id="equation_entry">
+                  <object class="AdwPreferencesGroup">
                     <property name="visible">True</property>
                     <property name="can-focus">True</property>
-                    <property name="title" translatable="yes">Y =</property>
-                    <property name="use-underline">True</property>
-                    <property name="max-width-chars">25</property>
-                  </object>
-                </child>
-                <child>
-                  <object class="AdwEntryRow" id="name_entry">
-                    <property name="visible">True</property>
-                    <property name="can-focus">True</property>
-                    <property name="title" translatable="yes">Name (blank to use equation)</property>
-                    <property name="use-underline">True</property>
-                    <property name="max-width-chars">25</property>
-                  </object>
-                </child>
-                <child>
-                  <object class="AdwEntryRow" id="X_start_entry">
-                    <property name="visible">True</property>
-                    <property name="can-focus">True</property>
-                    <property name="title" translatable="yes">X Start</property>
-                    <property name="use-underline">True</property>
-                    <property name="max-width-chars">25</property>
-                  </object>
-                </child>
-                <child>
-                  <object class="AdwEntryRow" id="X_stop_entry">
-                    <property name="visible">True</property>
-                    <property name="can-focus">True</property>
-                    <property name="title" translatable="yes">X Stop</property>
-                    <property name="use-underline">True</property>
-                    <property name="max-width-chars">25</property>
-                  </object>
-                </child>
-                <child>
-                  <object class="AdwEntryRow" id="step_size_entry">
-                    <property name="visible">True</property>
-                    <property name="can-focus">True</property>
-                    <property name="title" translatable="yes">Step Size</property>
-                    <property name="use-underline">True</property>
-                    <property name="max-width-chars">25</property>
-                  </object>
-                </child>
-                <child>
-                  <object class="GtkButton" id="add_equation_confirm_button">
-                    <property name="label">Confirm</property>
+                    <property name="title" translatable="yes">Add Equation</property>
+                    <property name="margin-start">30</property>
+                    <property name="margin-end">30</property>
                     <property name="margin-top">20</property>
-                    <property name="margin-bottom">10</property>
+                    <property name="margin-bottom">6</property>
+                    <child>
+                      <object class="AdwEntryRow" id="equation_entry">
+                        <property name="visible">True</property>
+                        <property name="can-focus">True</property>
+                        <property name="title" translatable="yes">Y =</property>
+                        <property name="use-underline">True</property>
+                        <property name="max-width-chars">25</property>
+                      </object>
+                    </child>
+                  </object>
+                </child>
+                <child>
+                  <object class="AdwPreferencesGroup">
+                    <property name="visible">True</property>
+                    <property name="can-focus">True</property>
+                    <property name="description" translatable="yes">Supports Numpy notation. Use a capital letter for the X coordinate.</property>
+                    <property name="margin-start">30</property>
+                    <property name="margin-end">30</property>
+                    <property name="margin-bottom">20</property>  
+                    <child>
+                      <object class="AdwEntryRow" id="name_entry">
+                        <property name="visible">True</property>
+                        <property name="can-focus">True</property>
+                        <property name="title" translatable="yes">Name (optional)</property>
+                        <property name="use-underline">True</property>
+                        <property name="max-width-chars">25</property>
+                      </object>
+                    </child>
+                    <child>
+                      <object class="GtkBox">
+                        <property name="margin-top">12</property>
+                        <property name="margin-bottom">6</property>                                                    
+                        <property name="orientation">horizontal</property>
+                        <child>
+                          <object class="AdwPreferencesGroup">
+                            <property name="margin-end">6</property>                            
+                            <child>
+                              <object class="AdwEntryRow" id="X_start_entry">
+                                <property name="visible">True</property>
+                                <property name="can-focus">True</property>
+                                <property name="title" translatable="yes">X Start</property>
+                                <property name="use-underline">True</property>
+                              </object>
+                            </child>
+                          </object>
+                        </child>
+                        <child>
+                          <object class="AdwPreferencesGroup">
+                            <property name="margin-end">6</property>                                                        
+                            <child>
+                              <object class="AdwEntryRow" id="X_stop_entry">
+                                <property name="visible">True</property>
+                                <property name="can-focus">True</property>
+                                <property name="title" translatable="yes">X Stop</property>
+                                <property name="use-underline">True</property>
+                              </object>
+                            </child>
+                          </object>
+                        </child>
+                        <child>
+                          <object class="AdwPreferencesGroup">
+                            <property name="margin-start">6</property>
+                            <child>
+                              <object class="AdwEntryRow" id="step_size_entry">
+                                <property name="visible">True</property>
+                                <property name="can-focus">True</property>
+                                <property name="title" translatable="yes">Step Size</property>
+                                <property name="use-underline">True</property>
+                              </object>
+                            </child>
+                          </object>
+                        </child>
+                      </object>
+                    </child>
+                    <child>
+                      <object class="GtkButton" id="add_equation_confirm_button">
+                        <property name="label">Add Equation</property>
+                        <property name="halign">center</property>
+                        <property name="margin-top">20</property>
+                        <property name="margin-bottom">10</property>
+                      </object>
+                    </child>
                   </object>
                 </child>
               </object>
@@ -96,5 +129,3 @@
     </child>
   </template>
 </interface>
-
-
