additional tweaks (for real this time)

--- a/data/ui/add_data_advanced.ui
+++ b/data/ui/add_data_advanced.ui
@@ -22,6 +22,9 @@
         <property name="orientation">vertical</property>
         <child>
           <object class="GtkHeaderBar" id="header_bar">
+            <style>
+              <class name="flat" />
+            </style>            
           </object>
         </child>
         <child>
