--- a/data/ui/transform_window.ui
+++ b/data/ui/transform_window.ui
@@ -61,7 +61,11 @@ To convert a value from degrees into radians use radians(value), e.g. Y = sin(ra
             </child>
             <child>
               <object class="GtkButton" id="transform_confirm_button">
-                <property name="label">Confirm</property>
+                <style>
+                  <class name="pill" />
+                </style>       
+                <property name="halign">center</property>
+                <property name="label">Transform</property>
                 <property name="margin-top">20</property>
                 <property name="sensitive">True</property>
               </object>
