--- a/data/ui/transform_window.ui
+++ b/data/ui/transform_window.ui
@@ -1,12 +1,10 @@
 <?xml version='1.0' encoding='utf-8'?>
-<!--SPDX-License-Identifier: GPL-3.0-or-later-->
 <interface>
   <requires lib="gtk" version="4.0" />
   <requires lib="libadwaita" version="1.2" />
   <template class="TransformWindow" parent="AdwWindow">
     <property name="title">Transform Data</property>
     <property name="default-width">425</property>
-    <property name="default-height">125</property>
     <child>
       <object class="GtkShortcutController">
         <child>
@@ -24,29 +22,21 @@
           <object class="GtkHeaderBar" id="header_bar">
             <style>
               <class name="flat" />
-            </style>            
+            </style>
           </object>
         </child>
         <child>
           <object class="AdwPreferencesGroup">
             <property name="visible">True</property>
             <property name="can-focus">True</property>
-            <property name="title" translatable="yes">Transform Data</property>
-            <property name="description" translatable="yes"> The transformation tool uses Numpy notation, with capital letters for the coordinates.
-
-Transformations are done piece-wise, if you want access to the entire range use X_range or Y_range. e.g. Y = Y/max(X_range) divides each Y value by the largest value of X.
-
-To convert a value from degrees into radians use radians(value), e.g. Y = sin(radians(X)).</property>
-            <property name="margin-start">30</property>
-            <property name="margin-end">30</property>
-            <property name="margin-top">20</property>
-            <property name="margin-bottom">20</property>
+            <property name="margin-start">26</property>
+            <property name="margin-end">26</property>
+            <property name="margin-top">12</property>
             <child>
               <object class="AdwEntryRow" id="transform_x_entry">
                 <property name="visible">True</property>
                 <property name="can-focus">True</property>
                 <property name="title" translatable="yes">X =</property>
-                <!--property name="subtitle" translatable="yes">The transformation on the X-axis</property!-->
                 <property name="use-underline">True</property>
               </object>
             </child>
@@ -55,25 +45,47 @@ To convert a value from degrees into radians use radians(value), e.g. Y = sin(ra
                 <property name="visible">True</property>
                 <property name="can-focus">True</property>
                 <property name="title" translatable="yes">Y =</property>
-                <!--property name="subtitle" translatable="yes">The transformation on the Y-axis</property!-->
                 <property name="use-underline">True</property>
               </object>
             </child>
+          </object>
+        </child>
+        <child>
+          <object class="AdwPreferencesGroup">
+            <property name="visible">True</property>
+            <property name="can-focus">True</property>
+            <property name="margin-start">26</property>
+            <property name="margin-end">26</property>
+            <property name="margin-top">12</property>
             <child>
-              <object class="GtkButton" id="transform_confirm_button">
-                <style>
-                  <class name="pill" />
-                </style>       
-                <property name="halign">center</property>
-                <property name="label">Transform</property>
-                <property name="margin-top">20</property>
-                <property name="sensitive">True</property>
+              <object class="AdwExpanderRow">
+                <property name="title">More info</property>
+                <child>
+                  <object class="AdwPreferencesGroup">
+                    <property name="description" translatable="yes"> The transformation tool uses Numpy notation, with capital letters for the coordinates.
+
+Transformations are done piece-wise, if you want access to the entire range use X_range or Y_range. e.g. Y = Y/max(X_range) divides each Y value by the largest value of X.
+
+To convert a value from degrees into radians use radians(value), e.g. Y = sin(radians(X)).</property>
+                  </object>
+                </child>
               </object>
             </child>
+          </object>
+        </child>
+        <child>
+          <object class="GtkButton" id="transform_confirm_button">
+            <style>
+              <class name="pill" />
+            </style>
+            <property name="halign">center</property>
+            <property name="label">Transform</property>
+            <property name="margin-top">26</property>
+            <property name="margin-bottom">26</property>
+            <property name="sensitive">True</property>
           </object>
         </child>
       </object>
     </child>
   </template>
 </interface>
-
