--- a/data/ui/transform_window.ui
+++ b/data/ui/transform_window.ui
@@ -4,7 +4,8 @@
   <requires lib="libadwaita" version="1.2" />
   <template class="TransformWindow" parent="AdwWindow">
     <property name="title">Transform Data</property>
-    <property name="default-width">425</property>
+    <property name="default-width">450</property>
+
     <child>
       <object class="GtkShortcutController">
         <child>
@@ -24,7 +25,7 @@
               <class name="flat" />
             </style>
           </object>
-        </child>
+        </child> 
         <child>
           <object class="AdwPreferencesGroup">
             <property name="visible">True</property>
@@ -49,30 +50,21 @@
               </object>
             </child>
           </object>
-        </child>
-        <child>
+        </child>        <child>
           <object class="AdwPreferencesGroup">
             <property name="visible">True</property>
             <property name="can-focus">True</property>
+            <property name="margin-top">12</property>            
             <property name="margin-start">26</property>
             <property name="margin-end">26</property>
-            <property name="margin-top">12</property>
-            <child>
-              <object class="AdwExpanderRow">
-                <property name="title">More info</property>
-                <child>
-                  <object class="AdwPreferencesGroup">
                     <property name="description" translatable="yes"> The transformation tool uses Numpy notation, with capital letters for the coordinates.
 
 Transformations are done piece-wise, if you want access to the entire range use X_range or Y_range. e.g. Y = Y/max(X_range) divides each Y value by the largest value of X.
 
-To convert a value from degrees into radians use radians(value), e.g. Y = sin(radians(X)).</property>
-                  </object>
-                </child>
-              </object>
-            </child>
+To convert a value from degrees into radians use radians(value), e.g. Y = sin(radians(X)).</property>            
           </object>
         </child>
+
         <child>
           <object class="GtkButton" id="transform_confirm_button">
             <style>
@@ -80,7 +72,6 @@ To convert a value from degrees into radians use radians(value), e.g. Y = sin(ra
             </style>
             <property name="halign">center</property>
             <property name="label">Transform</property>
-            <property name="margin-top">26</property>
             <property name="margin-bottom">26</property>
             <property name="sensitive">True</property>
           </object>
