reorder menu items
Signed-off-by: Christoph Matthias Kohnen <christoph.kohnen@disroot.org>

--- a/data/ui/window.ui
+++ b/data/ui/window.ui
@@ -750,12 +750,6 @@
         <attribute name="action">app.add_equation</attribute>
       </item>
     </section>
-    <section>
-      <item>
-        <attribute name="label" translatable="yes">_Open Project</attribute>
-        <attribute name="action">app.open_project</attribute>
-      </item>
-    </section>
   </menu>
   <menu id="view_menu">
     <section>
@@ -780,53 +774,53 @@
     </section>
     <section>
       <submenu>
-        <attribute name="label" translatable="yes">Top X Scale</attribute>
+        <attribute name="label" translatable="yes">_Top X Scale</attribute>
         <item>
-          <attribute name="label" translatable="yes">Logarithmic</attribute>
+          <attribute name="label" translatable="yes">_Logarithmic</attribute>
           <attribute name="action">app.change_top_xscale</attribute>
           <attribute name="target">log</attribute>
         </item>
         <item>
-          <attribute name="label" translatable="yes">Linear</attribute>
+          <attribute name="label" translatable="yes">_Linear</attribute>
           <attribute name="action">app.change_top_xscale</attribute>
           <attribute name="target">linear</attribute>
         </item>
       </submenu>
       <submenu>
-        <attribute name="label" translatable="yes">Bottom X Scale</attribute>
+        <attribute name="label" translatable="yes">_Bottom X Scale</attribute>
         <item>
-          <attribute name="label" translatable="yes">Logarithmic</attribute>
+          <attribute name="label" translatable="yes">_Logarithmic</attribute>
           <attribute name="action">app.change_bottom_xscale</attribute>
           <attribute name="target">log</attribute>
         </item>
         <item>
-          <attribute name="label" translatable="yes">Linear</attribute>
+          <attribute name="label" translatable="yes">_Linear</attribute>
           <attribute name="action">app.change_bottom_xscale</attribute>
           <attribute name="target">linear</attribute>
         </item>
       </submenu>
       <submenu>
-        <attribute name="label" translatable="yes">Left Y Scale</attribute>
+        <attribute name="label" translatable="yes">_Left Y Scale</attribute>
         <item>
-          <attribute name="label" translatable="yes">Logarithmic</attribute>
+          <attribute name="label" translatable="yes">_Logarithmic</attribute>
           <attribute name="action">app.change_left_yscale</attribute>
           <attribute name="target">log</attribute>
         </item>
         <item>
-          <attribute name="label" translatable="yes">Linear</attribute>
+          <attribute name="label" translatable="yes">_Linear</attribute>
           <attribute name="action">app.change_left_yscale</attribute>
           <attribute name="target">linear</attribute>
         </item>
       </submenu>
       <submenu>
-        <attribute name="label" translatable="yes">Right Y Scale</attribute>
+        <attribute name="label" translatable="yes">_Right Y Scale</attribute>
         <item>
-          <attribute name="label" translatable="yes">Logarithmic</attribute>
+          <attribute name="label" translatable="yes">_Logarithmic</attribute>
           <attribute name="action">app.change_right_yscale</attribute>
           <attribute name="target">log</attribute>
         </item>
         <item>
-          <attribute name="label" translatable="yes">Linear</attribute>
+          <attribute name="label" translatable="yes">_Linear</attribute>
           <attribute name="action">app.change_right_yscale</attribute>
           <attribute name="target">linear</attribute>
         </item>
@@ -836,29 +830,35 @@
   <menu id="primary_menu">
     <section>
       <item>
-        <attribute name="label" translatable="yes">_Export Data</attribute>
-        <attribute name="action">app.save_data</attribute>
+        <attribute name="label" translatable="yes">_Save Project</attribute>
+        <attribute name="action">app.save_project</attribute>
       </item>
+      <item>
+        <attribute name="label" translatable="yes">_Open Project</attribute>
+        <attribute name="action">app.open_project</attribute>
+      </item>
+    </section>
+    <section>
       <item>
         <attribute name="label" translatable="yes">_Export Figure</attribute>
-        <attribute name="action">app.export_data</attribute>
+        <attribute name="action">app.export_figure</attribute>
       </item>
       <item>
-        <attribute name="label" translatable="yes">_Export Project</attribute>
-        <attribute name="action">app.save_project</attribute>
-      </item>    
+        <attribute name="label" translatable="yes">_Export Data</attribute>
+        <attribute name="action">app.export_data</attribute>
+      </item>
     </section>
     <section>
       <item>
         <attribute name="label" translatable="yes">_Plot Settings</attribute>
         <attribute name="action">app.plot_settings</attribute>
       </item>
-    </section>
-    <section>
       <item>
         <attribute name="label" translatable="yes">_Preferences</attribute>
         <attribute name="action">app.preferences</attribute>
       </item>
+    </section>
+    <section>
       <item>
         <attribute name="label" translatable="yes">_Keyboard Shortcuts</attribute>
         <attribute name="action">win.show-help-overlay</attribute>
