--- a/data/ui/window.ui
+++ b/data/ui/window.ui
@@ -544,7 +544,7 @@
                                 </child>
                                 <child>
                                   <object class="AdwExpanderRow">
-                                    <property name="title">Manipulate Data</property>
+                                    <property name="title">Mathematical Operations</property>
                                     <child>
                                       <object class="GtkGrid">
                                         <child>
