--- a/data/ui/add_equation_window.ui
+++ b/data/ui/add_equation_window.ui
@@ -37,6 +37,7 @@
                     <property name="margin-start">26</property>
                     <property name="margin-end">26</property>
                     <property name="margin-top">12</property>
+                    <property name="margin-bottom">6</property>                    
                     <child>
                       <object class="AdwEntryRow" id="equation_entry">
                         <property name="visible">True</property>
