fix final clashes

--- a/data/ui/window.ui
+++ b/data/ui/window.ui
@@ -166,14 +166,6 @@
                     <property name="margin-start">12</property>
                     <property name="margin-end">12</property>
                     <child>
-                      <object class="GtkToggleButton" id="none_button">
-                        <property name="icon-name">input-mouse-symbolic</property>
-                        <property name="tooltip-text" translatable="yes">Normal mouse pointer</property>
-                        <property name="action-name">app.mode_none</property>
-                        <property name="hexpand">true</property>
-                      </object>
-                    </child>
-                    <child>
                       <object class="GtkToggleButton" id="pan_button">
                         <property name="icon-name">move-tool-symbolic</property>
                         <property name="tooltip-text" translatable="yes">Left button to pan, right button to zoom. Hold control to to keep aspect ratio fixed</property>
@@ -544,7 +536,7 @@
                                 </child>
                                 <child>
                                   <object class="AdwExpanderRow">
-                                    <property name="title">Mathematical Operations</property>
+                                    <property name="title">Manipulate Data</property>
                                     <child>
                                       <object class="GtkGrid">
                                         <child>
@@ -750,6 +742,12 @@
         <attribute name="action">app.add_equation</attribute>
       </item>
     </section>
+    <section>
+      <item>
+        <attribute name="label" translatable="yes">_Open Project</attribute>
+        <attribute name="action">app.open_project</attribute>
+      </item>
+    </section>
   </menu>
   <menu id="view_menu">
     <section>
@@ -774,53 +772,53 @@
     </section>
     <section>
       <submenu>
-        <attribute name="label" translatable="yes">_Top X Scale</attribute>
+        <attribute name="label" translatable="yes">Top X Scale</attribute>
         <item>
-          <attribute name="label" translatable="yes">_Logarithmic</attribute>
+          <attribute name="label" translatable="yes">Logarithmic</attribute>
           <attribute name="action">app.change_top_xscale</attribute>
           <attribute name="target">log</attribute>
         </item>
         <item>
-          <attribute name="label" translatable="yes">_Linear</attribute>
+          <attribute name="label" translatable="yes">Linear</attribute>
           <attribute name="action">app.change_top_xscale</attribute>
           <attribute name="target">linear</attribute>
         </item>
       </submenu>
       <submenu>
-        <attribute name="label" translatable="yes">_Bottom X Scale</attribute>
+        <attribute name="label" translatable="yes">Bottom X Scale</attribute>
         <item>
-          <attribute name="label" translatable="yes">_Logarithmic</attribute>
+          <attribute name="label" translatable="yes">Logarithmic</attribute>
           <attribute name="action">app.change_bottom_xscale</attribute>
           <attribute name="target">log</attribute>
         </item>
         <item>
-          <attribute name="label" translatable="yes">_Linear</attribute>
+          <attribute name="label" translatable="yes">Linear</attribute>
           <attribute name="action">app.change_bottom_xscale</attribute>
           <attribute name="target">linear</attribute>
         </item>
       </submenu>
       <submenu>
-        <attribute name="label" translatable="yes">_Left Y Scale</attribute>
+        <attribute name="label" translatable="yes">Left Y Scale</attribute>
         <item>
-          <attribute name="label" translatable="yes">_Logarithmic</attribute>
+          <attribute name="label" translatable="yes">Logarithmic</attribute>
           <attribute name="action">app.change_left_yscale</attribute>
           <attribute name="target">log</attribute>
         </item>
         <item>
-          <attribute name="label" translatable="yes">_Linear</attribute>
+          <attribute name="label" translatable="yes">Linear</attribute>
           <attribute name="action">app.change_left_yscale</attribute>
           <attribute name="target">linear</attribute>
         </item>
       </submenu>
       <submenu>
-        <attribute name="label" translatable="yes">_Right Y Scale</attribute>
+        <attribute name="label" translatable="yes">Right Y Scale</attribute>
         <item>
-          <attribute name="label" translatable="yes">_Logarithmic</attribute>
+          <attribute name="label" translatable="yes">Logarithmic</attribute>
           <attribute name="action">app.change_right_yscale</attribute>
           <attribute name="target">log</attribute>
         </item>
         <item>
-          <attribute name="label" translatable="yes">_Linear</attribute>
+          <attribute name="label" translatable="yes">Linear</attribute>
           <attribute name="action">app.change_right_yscale</attribute>
           <attribute name="target">linear</attribute>
         </item>
@@ -830,35 +828,29 @@
   <menu id="primary_menu">
     <section>
       <item>
-        <attribute name="label" translatable="yes">_Save Project</attribute>
-        <attribute name="action">app.save_project</attribute>
+        <attribute name="label" translatable="yes">_Export Data</attribute>
+        <attribute name="action">app.save_data</attribute>
       </item>
-      <item>
-        <attribute name="label" translatable="yes">_Open Project</attribute>
-        <attribute name="action">app.open_project</attribute>
-      </item>
-    </section>
-    <section>
       <item>
         <attribute name="label" translatable="yes">_Export Figure</attribute>
-        <attribute name="action">app.export_figure</attribute>
-      </item>
-      <item>
-        <attribute name="label" translatable="yes">_Export Data</attribute>
         <attribute name="action">app.export_data</attribute>
       </item>
+      <item>
+        <attribute name="label" translatable="yes">_Export Project</attribute>
+        <attribute name="action">app.save_project</attribute>
+      </item>    
     </section>
     <section>
       <item>
         <attribute name="label" translatable="yes">_Plot Settings</attribute>
         <attribute name="action">app.plot_settings</attribute>
       </item>
+    </section>
+    <section>
       <item>
         <attribute name="label" translatable="yes">_Preferences</attribute>
         <attribute name="action">app.preferences</attribute>
       </item>
-    </section>
-    <section>
       <item>
         <attribute name="label" translatable="yes">_Keyboard Shortcuts</attribute>
         <attribute name="action">win.show-help-overlay</attribute>
